package com.yonatankarp.abstractfactory

/**
 * Army interface.
 */
internal interface Army {
    val description: String
}
