package com.yonatankarp.abstractfactory

/**
 * Castle interface.
 */
internal interface Castle {
    val description: String
}
