package com.yonatankarp.abstractfactory

/**
 * Elf Army.
 */
internal class ElfArmy : Army {
    override val description = "This is the elven army!"
}
