package com.yonatankarp.abstractfactory

/**
 * Elf Castle.
 */
internal class ElfCastle : Castle {
    override val description = "This is the elven castle!"
}
