package com.yonatankarp.abstractfactory

/**
 * Elf King.
 */
internal class ElfKing : King {
    override val description = "This is the elven king!"
}
