package com.yonatankarp.abstractfactory

/**
 * King interface.
 */
internal interface King {
    val description: String
}
