package com.yonatankarp.abstractfactory

/**
 * Orc Army.
 */
internal class OrcArmy : Army {
    override val description = "This is the orc army!"
}
