package com.yonatankarp.abstractfactory

/**
 * OrcCastle.
 */
internal class OrcCastle : Castle {
    override val description = "This is the orc castle!"
}
