package com.yonatankarp.abstractfactory

/**
 * Orc King.
 */
internal class OrcKing : King {
    override val description = "This is the orc king!"
}
